@@ -5,6 +5,10 @@ To do:
 
 Log:
 
+- 29/05/2006, version 0.1.0: roms
+	- reworked USB/PID retrieval to make it independant of handle close/open/probe.
+		Please note that API external behaviour didn't change !
+
 - 06/05/2006, version 0.0.9: roms
 	- added ability to retrieve the USB hand-held connected from its PID
 	- improved ticables_probing_do which can probes all cables or USB cables only (faster).
